--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -5,6 +5,9 @@
   <p>Topic:{{ topic }}</p>
   
   <p>Entries:</p>
+  <p>
+      <a href="{% url 'learning_logs:new_entry' topic.id %}">add new entry</a>
+  </p>
   <ul>
   {% for entry in entries %}
     <li>
@@ -17,5 +20,5 @@
     </li>
   {% endfor %}
   </ul>
-  
+  <a href="{% url 'learning_logs:new_topic' %}">Add a new topic:</a>
 {% endblock content %}
