--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -40,8 +40,8 @@
               <li><a>Hello, {{ user.username  }}.</a></li>
               <li><a href="{% url 'users:logout' %}">log out</a></li>
             {% else %}
-              <li><a href="{% url 'users:rejister' %}">rejister</a></li>
-              <li><a href="{% url 'users:login' %}">loh in</a></li>
+              <li><a href="{% url 'users:register' %}">register</a></li>
+              <li><a href="{% url 'users:login' %}">log in</a></li>
             {% endif %}
           </ul>
         </div><!---/.nav-collapse-->
