--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,16 +1,22 @@
 {% extends "learning_logs/base.html" %}
 
+{% block header %}
+  <h1>Topics</h1>
+{% endblock header%}
+
 {% block content %}
-  <p>Topic</p>
   
   <ul>
     {% for topic in topics %}
       <li>
-        <a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a>
+        <h3>
+          <a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a>
+        </h3>
       </li>
     {% empty %}
       <li>No topics have been added yet.</li>
     {% endfor %}
   </ul>
   
+  <h3><a href="{% url 'learning_logs:new_topic' %}">Add new topic</a></h3>
 {% endblock content %}
